@@ -3,7 +3,9 @@ drumkv1 - an old-school drum-kit sampler
 
 ChangeLog
 
-
+- SIGTERM (and SIGINT) signal handler added to close the JACK
+  stand-alone client applications properly. (EXPERIMENTAL)
+- Make the GUI not to show initially on NSM. (EXPERIMENTAL)
 - Current element sample offset start/end parameters automation
   is now a possibility, on the LV2 plug-in only. (EXPERIMENTAL)
 - Make NSM state independent to session display name, keeping
